--- a/flex/style.css
+++ b/flex/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: coral;
 }
@@ -5,13 +11,22 @@ body{
 .container{
      display: flex;
      flex-wrap: wrap;
-     
+     flex-direction: row;
+     justify-content: center;
+     align-items: center;
+     align-content: space-around;
+     border: 2px dashed rebeccapurple;
+     height: 100%;
      
      
 }
 .item{
-    border: 1px solid black;
+    border: 2px solid black;
     height: 50px;
-    width: 80px;
+    width: 100px;
     background: papayawhip;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 15px;
 }
